# RacingWorld

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
ClientSide/: CMakeLists.txt  CPack.cmake
ClientSide/Benchmarks/: CMakeLists.txt  SIMDVectors.cpp
ClientSide/Benchmarks/Helpers/: GenerateRandomArray.hpp
ClientSide/CMake/: ProjectConfiguration.cmake
ClientSide/Dependencies/: CMakeLists.txt
ClientSide/Dependencies/Boost/Libraries/: libboost_atomic-vc141-mt-x32-1_70.lib  libboost_atomic-vc141-mt-x64-1_70.lib  libboost_chrono-vc141-mt-gd-x32-1_70.lib  libboost_container-vc141-mt-gd-x32-1_70.lib  libboost_container-vc141-mt-gd-x64-1_70.lib  libboost_contract-vc141-mt-x32-1_70.lib  libboost_coroutine-vc141-mt-gd-x64-1_70.lib  libboost_coroutine-vc141-mt-x32-1_70.lib  libboost_coroutine-vc141-mt-x64-1_70.lib  libboost_date_time-vc141-mt-gd-x32-1_70.lib  libboost_date_time-vc141-mt-x64-1_70.lib  libboost_exception-vc141-mt-gd-x32-1_70.lib  libboost_exception-vc141-mt-x32-1_70.lib  libboost_fiber-vc141-mt-x32-1_70.lib  libboost_fiber-vc141-mt-x64-1_70.lib  libboost_filesystem-vc141-mt-x32-1_70.lib  libboost_filesystem-vc141-mt-x64-1_70.lib  libboost_iostreams-vc141-mt-gd-x32-1_70.lib  libboost_iostreams-vc141-mt-x32-1_70.lib  libboost_math_c99-vc141-mt-gd-x64-1_70.lib  libboost_math_c99-vc141-mt-x32-1_70.lib  libboost_math_c99-vc141-mt-x64-1_70.lib  libboost_math_c99f-vc141-mt-gd-x64-1_70.lib  libboost_math_c99l-vc141-mt-gd-x32-1_70.lib  libboost_math_c99l-vc141-mt-gd-x64-1_70.lib  libboost_prg_exec_monitor-vc141-mt-x64-1_70.lib  libboost_random-vc141-mt-gd-x64-1_70.lib  libboost_random-vc141-mt-x64-1_70.lib  libboost_stacktrace_noop-vc141-mt-gd-x32-1_70.lib  libboost_system-vc141-mt-gd-x64-1_70.lib  (+10 more)
ClientSide/Dependencies/MathLibrary/: CMakeLists.txt
ClientSide/Dependencies/MemoryLibrary/: CMakeLists.txt
ClientSide/MathLibrary/: CMakeLists.txt
ClientSide/MathLibrary/Sources/: Matrices4x4.cpp  Matrix4x4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
ClientSide/MemoryLibrary/: CMakeLists.txt
ClientSide/MemoryLibrary/Sources/: LinearAllocator.cpp  PoolAllocator.cpp
ClientSide/RacingWorld/: CMakeLists.txt
ClientSide/RacingWorld/Graphics/: Camera.cpp  Camera.h  GameWorld.h  IDrawable.h  OpenGL4.h  Player.h  Scene.h  SceneGraph.cpp  SceneGraph.h  ShaderProgram.cpp  ShaderProgram.h  Sky.cpp  Sky.h
ClientSide/RacingWorld/Utils/: Configuration.cpp  Configuration.h  FileSystem.cpp  Ping.hpp
ClientSide/Resources/: Configuration.xml  Models.xml  Player.xml  Shaders.xml  Strings.xlsx
ClientSide/Resources/Maps/: CommonMap.xml
ClientSide/Resources/Shaders/: BaseShader.frag  BaseShader.vert  BaseShader2.vert  FontShader.frag  FontShader.vert
ClientSide/Sources/: CMakeLists.txt  CPack.cmake  EventSystem.hpp  Main.cpp
ClientSide/Sources/Core/: Input.hpp  Managers.hpp  ResourcesFWD.hpp
ClientSide/Sources/EventSystem/: Event.hpp  EventManager.cpp  EventManager.hpp  IEventSubscriber.hpp
ClientSide/Sources/Graphics/: Camera.h  GameWorld.cpp  GameWorld.h  IDrawable.h  OpenGL.cpp  OpenGL.hpp  OpenGL4.hpp  Player.hpp  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Sky.cpp  Sky.h
ClientSide/Sources/Input/: EKeyboardCode.hpp  KeyboardState.cpp  KeyboardState.hpp  MouseState.cpp  MouseState.hpp
ClientSide/Sources/Math/: Constants.h  Constants.hpp  Math.hpp  Matrices.hpp  Matrices2x2.hpp  Matrices3x3.hpp  Matrices4x4.hpp  Matrix2x2.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  Vectors.hpp
ClientSide/Sources/Memory/: Allocator.cpp  Allocator.hpp  IAllocatable.hpp  INonCopyable.hpp  INonMoveable.hpp  LinearAllocator.cpp  LinearAllocator.hpp  Memory.hpp  MemoryManager.cpp  MemoryManager.hpp  PoolAllocator.cpp  PoolAllocator.hpp  StackAllocator.cpp  StackAllocator.hpp  StringsMemoryPool.cpp  StringsMemoryPool.hpp
ClientSide/Sources/Network/: NetworkManager.cpp  NetworkManager.hpp  Protocol.hpp  UDPConnection.cpp  UDPConnection.hpp
ClientSide/Sources/System/: KeyboardState.cpp  KeyboardState.hpp  MouseState.cpp  MouseState.hpp
ClientSide/Sources/Utils/: Configuration.cpp  Configuration.hpp  Debug.hpp  FileSystem.cpp  FileSystem.hpp  LocaleManager.cpp  LocaleManager.hpp  Logger.hpp  Macroses.hpp  ObjParser.cpp  ObjParser.hpp  Ping.hpp  StringOperations.hpp  System.cpp  System.hpp  Time.cpp  Time.hpp
ClientSide/Sources/WindowSystem/: Window.cpp  Window.hpp  WindowEventListener.cpp  WindowEventListener.hpp
ClientSide/Tests/: CMakeLists.txt  Vector2Test.cpp
ClientSide/Tests/Math/: Matrix3x3Test.cpp  Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp  VectorsTest.cpp
Sources/: Aliases.hpp  CMakeLists.txt  CPack.cmake  Main.cpp  PrecompiledHeader.cmake  PrecompiledHeader.cpp  PrecompiledHeader.hpp
Sources/Core/: InputFWD.hpp  Managers.hpp  ManagersFWD.hpp  Resources.hpp  ResourcesFWD.hpp
Sources/Core/GUI/: Window.cpp  Window.hpp
Sources/Core/Graphics/: Camera.cpp  Camera.hpp  FrameCalculator.cpp  FrameCalculator.hpp  IDrawable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
Sources/Core/Helpers/: Debug.hpp  Macroses.hpp  Metafunctions.hpp  Time.hpp  TypeLists.hpp
Sources/Core/Input/: InputEventHandler.cpp  InputEventHandler.hpp  KeyboardState.cpp  KeyboardState.hpp  MouseState.cpp  MouseState.hpp
Sources/Core/Managers/: ConfigurationManager.cpp  ConfigurationManager.hpp  IManager.hpp  LocaleManager.cpp  LocaleManager.hpp  PlayerManager.cpp  PlayerManager.hpp  ResourceManager.cpp  ResourceManager.hpp  SoundManager.cpp  SoundManager.hpp
Sources/Core/Resources/: IResource.hpp  Image.cpp  Image.hpp  Map.cpp  Map.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  RecourceKeys.hpp  ResourceTypes.hpp  Sound.cpp  Sound.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp
Sources/Game/: Application.cpp  Application.hpp  Identifiers.hpp
Sources/Game/Maps/: CustomMapCreator.cpp  CustomMapCreator.hpp  IMapCreator.hpp  Map.cpp  Map.hpp  MapObject.cpp  MapObject.hpp
Sources/Game/World/: WorldCreator.cpp  WorldCreator.hpp
(+718 files in other folders)
